# mental_mahjong

./: pyproject.toml
src/mental_mahjong/core/: __init__.py  agreements.py  communicator.py  cryptosystem.py  el_gamal.py
